# dotfiles

./: .bash_aliases  .bashrc  .gitmodules  .tmux.conf  global-packages.md  modified_catpuccin_posh_theme.json  my-posh-theme.json  opencode.json  pnpm-global.md  razer-headset-monitor.sh  vial-keyboard-layout.vil
cargo/: config.toml
dunst/: dunstrc
fzf/: fuzzy-edit.sh  fzf-lib.sh  fzf-man.sh  fzf-select-paths.sh  interactive-search.sh
ghostty/: config
git/: commit-msg  config  gitmessage.txt  pre-commit
i3/: config  config.bak  dual_monitor.sh
my-lock/: Cargo.toml
my-lock/src/: background.rs  drawing.rs  inputs.rs  jpg.rs  main.rs  pam.rs  prompt.rs  randr.rs  saver.rs
neofetch/: config.conf
nvim/: .luarc.jsonc  init.lua  lazy-lock.json  lazyvim.json
nvim-scratch/: init.lua  lazy-lock.json
nvim-scratch/lua/: autocmds.lua  keymaps.lua  lightbulb.lua
nvim-scratch/lua/plugins/: blink.lua  copilot.lua  fzf-lua.lua  lsp.lua  mason-lspconf.lua  mason.lua  mini-files.lua  which-key.lua
nvim/lua/: lsp.lua
nvim/lua/plugins/: blink.lua  colorscheme.lua  lsp.lua  mini-files.lua  treesitter.lua
nvim/lua/thomas/: lazy.lua
nvim/nvim/: init.lua  lazy-lock.json
nvim/nvim/snippets/: global.json
obsidian/.obsidian_global/: app.json
picom/: picom.conf
plugins/present.nvim/: .editorconfig  README.md
plugins/present.nvim/lua/: present.lua
polybar/: config.ini  launch.sh
rofi/: config.rasi
rofi/themes/: catpuc.rasi
systemd/user/: razer-headset-monitor.service  xrandr-resume.service  xrandr.service
tmux/: tmux.conf
(+22 files in other folders)
