[package]
name = "my-lock"
version = "0.1.0"
edition = "2024"

[dependencies]
nonstick = "0.1.1"
image = "0.25.8"
xcb = { version = "1.6.0", features = ["randr", "xkb"] }
xkbcommon = { version = "0.9.0", features = ["x11"] }
cairo-rs = { version = "0.21.2", features = ["png", "xcb"] }
cairo-sys-rs = { version = "0.21.2", features = ["xcb"] }
xcb-sys = "0.2.1"
zeroize = "1.8.1"
